Update documentation and project settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ author_email = viktor.rosenfeld@tu-berlin.de
 description = A collection of tools to simplify working with Moodle quizzes
 long_description = file: README.org
 long_description_content_type = text/markdown
-url = https://github.com/TU-Berlin-DIMA/moodletools
+url = https://git.tu-berlin.de/dima/moodletools
 project_urls =
-    Bug Tracker = https://github.com/TU-Berlin-DIMA/moodletools/issues
+    Bug Tracker = https://git.tu-berlin.de/dima/moodletools/-/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache License
