--- a/examples/coderunner.yml
+++ b/examples/coderunner.yml
@@ -1,24 +1,33 @@
-title: Sample SQL Coderunner Question 
+---
+title: Sample SQL Coderunner Question
 general_feedback: A query was submitted
 database: eshop
-question: "Formulieren Sie den SQL-Ausdruck, der äquivalent zu folgender Aussage ist:\n 
-           Die Namen der teuersten Produkte und deren Preis?"
-correct_query: "SELECT Name, Preis FROM Produkt\n
-            WHERE Preis = (\n
-            SELECT MAX(Preis) FROM Produkt\n
-            ) ORDER BY Name ASC"
-result: "Name                            Preis\n
-------------------------------  ----------\n
-Rolex Daytona                   20000\n"
+question: |-
+  Formulieren Sie den SQL-Ausdruck, der äquivalent zu folgender Aussage ist:
+  Die Namen der teuersten Produkte und deren Preis?
+correct_query: |-
+  SELECT Name, Preis
+  FROM Produkt
+  WHERE Preis = (
+    SELECT MAX(Preis)
+    FROM Produkt
+  )
+  ORDER BY Name ASC
+result: |-
+  Name                            Preis
+  ------------------------------  ----------
+  Rolex Daytona                   20000
 additional_testcases:
   - testcase:
-    changes: "INSERT INTO Produkt (Name, Preis) VALUES ('Audi A6', 25000);
-             INSERT INTO Produkt (Name, Preis) VALUES ('BMW', 50000);
-             INSERT INTO Produkt (Name, Preis) VALUES ('Pokemon Glurak Holo Karte', 50000);"
-    new_result: "Name                            Preis\n
-------------------------------  ----------\n
-BMW                             50000\n
-Pokemon Glurak Holo Karte       50000\n"
+    changes: |-
+      INSERT INTO Produkt (Name, Preis) VALUES ('Audi A6', 25000);
+      INSERT INTO Produkt (Name, Preis) VALUES ('BMW', 50000);
+      INSERT INTO Produkt (Name, Preis) VALUES ('Pokemon Glurak Holo Karte', 50000);
+    new_result: |-
+      Name                            Preis
+      ------------------------------  ----------
+      BMW                             50000
+      Pokemon Glurak Holo Karte       50000
 column_widths:
   - 30
   - 10
