--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,9 @@ classifiers = [
     "Operating System :: OS Independent,"
 ]
 dependencies = [
-    "pyyaml >= 6",
     "markdown >= 3.4",
+    "pyyaml >= 6",
+    "sqlparse ~= 0.4.4",
 ]
 
 [project.optional-dependencies]
