--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ readme = {file = ["README.md"], content-type = "text/markdown"}
 include = '\.py$'
 target-version = ["py310", "py311"]
 preview = true
+line-length = 120
 
 [tool.isort]
 profile = "black"
