#7 changes in gitlab config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,5 +14,6 @@ pytest:
   artifacts:
     paths:
       - htmlcov/  # Store coverage reports as artifacts
-  only:
-    - merge_requests  # Run only for merge requests
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'  # Run for all changes to a merge request's source branch
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH       # Run for all changes to the default branch
