--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,41 +1,43 @@
 ---
 repos:
-  - repo: 'https://github.com/pre-commit/pre-commit-hooks'
+  - repo: "https://github.com/pre-commit/pre-commit-hooks"
     rev: v4.5.0
     hooks:
       - id: check-case-conflict
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
+      - id: check-toml
       - id: check-yaml
         args:
-          - '--allow-multiple-documents'
+          - "--allow-multiple-documents"
       - id: debug-statements
       - id: end-of-file-fixer
         exclude: .*\.svg
       - id: mixed-line-ending
         args:
-          - '--fix=lf'
+          - "--fix=lf"
       - id: name-tests-test
         args:
-          - '--pytest-test-first'
+          - "--pytest-test-first"
       - id: trailing-whitespace
-  - repo: 'https://github.com/adrienverge/yamllint.git'
+  - repo: "https://github.com/adrienverge/yamllint.git"
     rev: v1.35.1
     hooks:
       - id: yamllint
         args:
-          - '--strict'
+          - "--strict"
           - >-
             -d {extends: default, rules: {
             line-length: {max: 120, level: warning},
             truthy: {allowed-values: ["true", "True", "false", "False"]},
+            comments: {require-starting-space: false},
             }}
 
-  - repo: 'https://github.com/psf/black'
-    rev: 24.2.0
+  - repo: "https://github.com/psf/black"
+    rev: 24.3.0
     hooks:
       - id: black
-  - repo: 'https://github.com/PyCQA/isort'
+  - repo: "https://github.com/PyCQA/isort"
     rev: 5.13.2
     hooks:
       - id: isort
@@ -44,25 +46,26 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies:
-          - 'flake8-bugbear'
-          - 'flake8-docstrings'
-          - 'flake8-implicit-str-concat'
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0
-    hooks:
-      - id: mypy
-        additional_dependencies:
-          - types-pyyaml
-          - types-markdown
-  - repo: 'https://github.com/shellcheck-py/shellcheck-py'
-    rev: v0.9.0.6
+          - "flake8-bugbear"
+          - "flake8-docstrings"
+          - "flake8-comprehensions"
+          - "flake8-implicit-str-concat"
+          - "Flake8-pyproject"
+  - repo: "https://github.com/shellcheck-py/shellcheck-py"
+    rev: v0.10.0.1
     hooks:
       - id: shellcheck
         name: shellcheck
         args:
-          - '--severity=style'
+          - "--severity=style"
   - repo: local
     hooks:
+      - id: mypy
+        name: mypy
+        entry: mypy
+        language: system
+        types:
+          - python
       - id: pylint
         name: pylint
         entry: pylint
