--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,12 +18,8 @@ pytest:
   stage: test
   script:
     # Run tests with coverage
-    - pytest --cov=moodle_tools --cov-report=html tests
+    - pytest --cov=moodle_tools --cov-report term-missing:skip-covered tests
   coverage: '/TOTAL.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
-  artifacts:
-    paths:
-      # Store coverage reports as artifacts
-      - htmlcov/
   rules:
     # Run for all changes to a merge request's source branch
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
