--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,16 +51,16 @@ readme = { file = ["README.md"], content-type = "text/markdown" }
 include = '\.py$'
 target-version = ["py310", "py311", "py312"]
 preview = true
-line-length = 120 # TODO: change to 99
+line-length = 99
 
 [tool.flake8]
-max-line-length = 120 # TODO: change to 90
+max-line-length = 90
 select = ["B", "C", "D", "E", "F", "W", "B9", "C4"]
-ignore = ["D1", "D415", "E203", "E501", "F821", "W503"]
+ignore = ["B907", "D1", "D415", "E203", "E501", "F821", "W503"]
 docstring-convention = "google"
 
 [tool.isort]
-line_length = 120 # TODO: change to 99
+line_length = 99
 profile = "black"
 skip_gitignore = true
 
@@ -78,7 +78,7 @@ good-names = ["i", "j", "k", "x", "_"]
 
 [tool.pylint.design]
 # Maximum number of characters on a single line.
-max-line-length = 120
+max-line-length = 99
 
 [tool.pylint."messages control"]
 disable = [
