--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
     "Operating System :: OS Independent,",
 ]
 dependencies = [
+    "duckdb ~= 0.10.1",
     "Jinja2 ~= 3.1",
     "markdown ~= 3.4",
     "pyyaml ~= 6.0",
