--- a/examples/markdown.yaml
+++ b/examples/markdown.yaml
@@ -6,7 +6,7 @@ question: |-
 
   Please take a look at the rectangle below:
 
-  ![Blue rectangle PNG](examples/blue-rectangle.png)
+  ![Blue rectangle PNG](examples/assets/blue-rectangle.png)
 
        Code
 
@@ -15,7 +15,7 @@ answers:
   - answer: |-
       The rectangle is *blue*, like the one below.
 
-      ![Blue rectangle SVG](examples/blue-rectangle.svg)
+      ![Blue rectangle SVG](examples/assets/blue-rectangle.svg)
   - answer: The rectangle is yellow.
   - answer: |-
       ```
