--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 ]
 dependencies = [
     "duckdb ~= 0.10.1",
+    "isda-streaming @ git+https://git.tu-berlin.de/dima/isda/isda-streaming",
     "Jinja2 ~= 3.1",
     "markdown ~= 3.4",
     "pyyaml ~= 6.0",
@@ -104,6 +105,8 @@ disable = [
     "use-implicit-booleaness-not-comparison-to-zero",
     "too-many-branches",
     "too-many-arguments",
+    "too-many-locals",
+    "eval-used",
     # Let flake8 raise the following issues
     "line-too-long",
     "missing-module-docstring",
