#11 Migrate all options from CLI into YAML, excluding -i, -o, and -q. -q (add question index) is not isolated per question.

--- a/examples/coderunner-w_connection.yaml
+++ b/examples/coderunner-w_connection.yaml
@@ -2,6 +2,7 @@
 type: sql_dql
 category: sql-dql
 title: Sample SQL Coderunner Question
+markdown: true
 question: |-
   Formulieren Sie den SQL-Ausdruck, der äquivalent zu folgender Aussage ist:
 
