--- a/examples/markdown.yaml
+++ b/examples/markdown.yaml
@@ -1,6 +1,7 @@
 ---
 type: multiple_choice
 title: Multiple choice question with Markdown
+markdown: true
 question: |-
   # Really important question!
 
