--- a/examples/yaml_templates.yaml
+++ b/examples/yaml_templates.yaml
@@ -328,4 +328,4 @@ answers:   # Mandatory
       |------|------|
       | 1    | 2    |
   - answer: |-  # Hint formula
-      This is a formula: \( \mathbf{a}^2 + \mathbf{b}^2 = \mathbf{c}^2 \).
+      This is a formula: \\( \mathbf{a}^2 + \mathbf{b}^2 = \mathbf{c}^2 \\).
