[#46] Bump minimum version to Python 3.11

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "moodle_tools"
 dynamic = ["version", "readme"]
 description = "A collection of tools to simplify working with Moodle quizzes."
-requires-python = ">=3.10,<=3.12"
+requires-python = ">=3.11,<3.13"
 license = { file = "LICENSE" }
 authors = [
     { name = "Viktor Rosenfeld", email = "viktor.rosenfeld@tu-berlin.de" },
@@ -15,7 +15,6 @@ maintainers = [{ name = "ISDA Team", email = "isda@dima.tu-berlin.de" }]
 keywords = ["data streams", "query relaxation"]
 classifiers = [
     "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Operating System :: OS Independent,",
