--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "Jinja2 ~= 3.1",
     "markdown ~= 3.4",
     "pyyaml ~= 6.0",
-    "sqlparse ~= 0.5.0",
+    "sqlglot ~= 23.12.1",
 ]
 
 [project.optional-dependencies]
