--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "markdown ~= 3.4",
     "pyyaml ~= 6.0",
     "sqlparse ~= 0.5.0",
+    "jsonschema ~=4.21.1"
 ]
 
 [project.optional-dependencies]
