--- a/examples/coderunner-ddl.yaml
+++ b/examples/coderunner-ddl.yaml
@@ -21,5 +21,8 @@ testcases:
   - description: Korrektheit Tabelle thisisatest
     code: MT_testtablecorrectness thisisatest
     grade: 0.5
+  - description: Korrektheit Attribute thisisatest
+    code: MT_testtablecorrectness_name thisisatest
+    grade: 0.5
 check_results: false
 database_connection: true
