--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
     "Operating System :: OS Independent,",
 ]
 dependencies = [
-    "duckdb ~= 0.10.1",
+    "duckdb == 0.10.3",
     "isda-streaming @ git+https://git.tu-berlin.de/dima/isda/isda-streaming",
     "Jinja2 ~= 3.1",
     "markdown ~= 3.4",
