--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "duckdb == 0.10.3",
     "isda-streaming @ git+https://git.tu-berlin.de/dima/isda/isda-streaming",
     "Jinja2 ~= 3.1",
+    "loguru > 0.7",
     "markdown ~= 3.4",
     "pyyaml ~= 6.0",
     "sqlparse ~= 0.5.0",
